# custom_data_structures

./: README.md  pyproject.toml
src/patterns/: visitor.py
src/trees/: interfaces.py
