[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "custom_data_structures_GDeLuisi"
version = "0.0.1"
authors = [
  { name="GDeLuisi", email="deluisigerardo@gmail.com" },
]
description = "Data Structures with python objects"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.urls]
Homepage = "https://github.com/GDeLuisi/custom_data_structures"
Issues = "https://github.com/GDeLuisi/custom_data_structures/issues"